--- a/manifest-unversioned.yml
+++ b/manifest-unversioned.yml
@@ -6,13 +6,14 @@ applications:
   instances: 1
   memory: 1G
   path: libs/accounts-service-${version}.jar
-  buildpacks:
-   - https://github.com/cloudfoundry/java-buildpack.git#v4.16.1
   services:
    - service-registry
    - circuit-breaker-dashboard
    - config-server
    - traderdb
    - newrelic
+   - app-autoscaler
   env:
     SPRING_PROFILES_ACTIVE: cloud
+  health-check-type: http
+  health-check-http-endpoint: /actuator/health
